fix(core/overflow-tooltip): allow overflow tooltip interaction

--- a/packages/core/src/overflow-tooltip/_overflow-tooltip-styles.scss
+++ b/packages/core/src/overflow-tooltip/_overflow-tooltip-styles.scss
@@ -2,9 +2,13 @@
 @use '@mezzanine-ui/system/spacing';
 @use '@mezzanine-ui/system/radius';
 @use '@mezzanine-ui/system/effect';
+@use '~@mezzanine-ui/system/z-index';
 @use './overflow-tooltip' as *;
 
 .#{$prefix} {
+  z-index: z-index.get(popover);
+  pointer-events: all;
+
   &__content {
     box-sizing: border-box;
     display: inline-flex;
@@ -17,7 +21,7 @@
     max-width: spacing.semantic-variable(size, container, narrow);
     max-inline-size: spacing.semantic-variable(size, container, narrow);
     padding: spacing.semantic-variable(padding, vertical, tiny)
-    spacing.semantic-variable(padding, horizontal, tiny);
+      spacing.semantic-variable(padding, horizontal, tiny);
     border-radius: radius.variable(tiny);
     background-color: palette.semantic-variable('background', base);
     box-shadow: effect.variable(shadow, floating);
